Atualização de código

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost/dentech?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/dentalpix?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 #spring.datasource.password=root
 
@@ -10,3 +10,7 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=yyyy-MM-dd
 
 dentech.seguranca.enable-https=false
+
+#Profile para seleção da segurança
+spring.profiles.active=oauth-security
+#spring.profiles.active=basic-security
