--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
-spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost/dentalpix?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=root
+#spring.jpa.database=MYSQL
+#spring.datasource.url=jdbc:mysql://localhost/dentalpix?createDatabaseIfNotExist=true&useSSL=false
+#spring.datasource.username=root
 #spring.datasource.password=root
 
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.flyway.baseline-on-migrate=true
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.date-format=yyyy-MM-dd
+
 
 dentech.seguranca.enable-https=false
 
